# pgnx

./: .gitignore  .npmignore  CMakeLists.txt  IMPLEMENTATION.md  LICENSE  Makefile  PERFORMANCE.md  README.md  RELEASE_NOTES.md  bench-real.js  benchmark.js  binding.gyp  conanfile.py  driver.cpp  hi.json  index.d.ts  index.js  package-lock.json  package.json  pg_config_paths.h  pgnx-1.0.2.tgz  test-docker.js  test-pool.js  test-real.js  test.js  test1.js
.github/workflows/: npm-publish.yml  prebuild.yml  release.yml  test-linux.yml  test-macos.yml  test-windows.yml  test.yml
prebuilds/linux-x64/: pgnx.node
scripts/: conan-setup.ps1  conan-setup.sh  install.js
src/: addon.cpp  connection.cpp  connection.h  connection_pool.cpp  connection_pool.h  listener.cpp  listener.h
test/: index.test.js
